Closed
Bug 1503077
Opened 7 years ago
Closed 7 years ago
Disable spectre mitigations by default on mips.
Categories
(Core :: JavaScript Engine: JIT, defect)
Tracking
()
RESOLVED
FIXED
mozilla65
Tracking | Status | |
---|---|---|
firefox65 | --- | fixed |
People
(Reporter: yuyin-hf, Assigned: yuyin-hf)
Details
Attachments
(1 file, 1 obsolete file)
2.60 KB,
patch
|
yuyin-hf
:
review+
yuyin-hf
:
review+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_14) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/12.0 Safari/605.1.15
Steps to reproduce:
build firefox or js and run it.
Actual results:
it crash because of unimplemented function.
Expected results:
run successfully
see also 1442217 and 1468277 . So I just want to disable it by default on mips.
see 1425986, So I use JS_CODEGEN_MIPS32 and JS_CODEGEN_MIPS64 as it is on mips platform, is that ok?
Attachment #9020982 -
Flags: review?(jdemooij)
Attachment #9020982 -
Flags: feedback?(dragan.mladjenovic)
Component: Untriaged → JavaScript Engine: JIT
Product: Firefox → Core
Hardware: Unspecified → Other
Comment 3•7 years ago
|
||
Comment on attachment 9020982 [details] [diff] [review]
0001-Disable-spectre-mitigations-by-default-on-mips-64.patch
Review of attachment 9020982 [details] [diff] [review]:
-----------------------------------------------------------------
r=me with nit addressed.
::: js/src/jit/JitOptions.cpp
@@ +234,4 @@
> }
> }
>
> +#ifdef __mips__
This should also be:
#if defined(JS_CODEGEN_MIPS32) || defined(JS_CODEGEN_MIPS64)
Attachment #9020982 -
Flags: review?(jdemooij) → review+
Attachment #9020982 -
Attachment is obsolete: true
Attachment #9020982 -
Flags: feedback?(dragan.mladjenovic)
Attachment #9021095 -
Flags: review?(yuyin-hf)
Attachment #9021095 -
Flags: review+
Attachment #9021095 -
Flags: review?(yuyin-hf) → review+
Keywords: checkin-needed
Pushed by dvarga@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/994d18f1e30d
Disable spectre mitigations by default on mips(64). r=jandem
Keywords: checkin-needed
Comment 6•7 years ago
|
||
bugherder |
Status: UNCONFIRMED → RESOLVED
Closed: 7 years ago
status-firefox65:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla65
Updated•7 years ago
|
Assignee: nobody → yuyin-hf
You need to log in
before you can comment on or make changes to this bug.
Description
•