Bug 1503077 - Disable spectre mitigations by default on mips(64). r=jandem